--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -26,22 +26,25 @@
         android:textStyle="bold"
         android:textSize="30sp"
         android:textColor="#0a7303"
+        android:fontFamily="@font/audiowide"
         android:layout_centerHorizontal="true"/>
-    <TextView
+    <me.biubiubiu.justifytext.library.JustifyTextView
         android:id="@+id/text1_about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/about_text1"
+        android:layout_marginLeft="10sp"
         android:layout_below="@id/heading1"
-        android:layout_margin="5dp"
         android:textColor="#252323"/>
-    <TextView
+    <me.biubiubiu.justifytext.library.JustifyTextView
         android:id="@+id/text2_about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10sp"
+
         android:text="@string/about_text2"
         android:layout_below="@id/text1_about"
-        android:layout_margin="5dp"
+        android:layout_marginTop="5sp"
         android:textColor="#252323"/>
     <TextView
         android:id="@+id/heading2"
@@ -50,16 +53,20 @@
         android:text="Quality"
         android:textColor="#ed0707"
         android:textSize="30sp"
+        android:layout_marginLeft="20sp"
+        android:layout_marginRight="20sp"
         android:layout_below="@id/text2_about"
         android:layout_margin="5dp"/>
-    <TextView
+    <me.biubiubiu.justifytext.library.JustifyTextView
         android:id="@+id/text3_about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/about_text3"
         android:layout_below="@id/heading2"
         android:textColor="#252323"
-        android:layout_margin="5dp"/>
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginBottom="20sp"/>
 
 </RelativeLayout>
 </ScrollView>
