--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -68,11 +68,12 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/logo"
+        android:layout_toRightOf="@+id/logo"
+        android:fontFamily="@font/audiowide"
         android:text="KARIMULLA GROUP"
         android:textColor="#0a7303"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:layout_toRightOf="@+id/logo" />
+        android:textSize="26sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/call_us"
